// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumpadControlButton renders button component with all props 1`] = `
<DocumentFragment>
  .c0 {
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  position: relative;
}

.c1 {
  align-items: center;
  background-color: #ffffff;
  border-radius: 10px;
  border: 1px solid #1648ff;
  color: #1648ff;
  cursor: pointer;
  display: flex;
  font-size: 1.8em;
  justify-content: center;
  min-height: 64px;
  min-width: 64px;
  user-select: none;
  transition: color 0.3s ease,background-color 0.3s ease;
  background-color: #1648ff;
  color: #ffffff;
  fill: #fff;
}

.c1:hover {
  color: #1648ff;
  background-color: #f4f5f5;
  fill: #1648ff;
}

.c1:active {
  background-color: #1648ff;
  color: #ffffff;
  fill: #1648ff;
}

.c3 {
  color: #24292ebf;
  font-weight: 600;
  text-align: center;
  white-space: nowrap;
}

.c2 {
  align-items: center;
  background-color: #1648ff;
  border-radius: 50px;
  box-shadow: 0px 1px 2px #181a1b33;
  color: #fff;
  display: flex;
  font-size: 12px;
  font-weight: 700;
  justify-content: center;
  left: 50%;
  padding: 0;
  padding: 8px;
  position: absolute;
  top: -16%;
  user-select: none;
  z-index: 1;
  transition: 0.2s ease background-color,0.2s ease color;
}

<button
    class="c0 X"
  >
    <div
      class="c1"
    >
      2
    </div>
    <div
      class="c2"
    >
      ON
    </div>
    <div
      class="c3"
    >
      2
    </div>
  </button>
</DocumentFragment>
`;

exports[`NumpadControlButton renders button component with required props 1`] = `
<DocumentFragment>
  .c0 {
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  position: relative;
}

.c1 {
  align-items: center;
  background-color: #ffffff;
  border-radius: 10px;
  border: 1px solid #1648ff;
  color: #1648ff;
  cursor: pointer;
  display: flex;
  font-size: 1.8em;
  justify-content: center;
  min-height: 64px;
  min-width: 64px;
  user-select: none;
  transition: color 0.3s ease,background-color 0.3s ease;
}

.c1:hover {
  color: #1648ff;
  background-color: #f4f5f5;
  fill: #1648ff;
}

.c1:active {
  background-color: #1648ff;
  color: #ffffff;
  fill: #1648ff;
}

.c2 {
  color: #24292ebf;
  font-weight: 600;
  text-align: center;
  white-space: nowrap;
}

<button
    class="c0"
  >
    <div
      class="c1"
    >
      2
    </div>
    <div
      class="c2"
    >
      2
    </div>
  </button>
</DocumentFragment>
`;
